starr-config/radarr/radarr-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: radarr-service
    app.kubernetes.io/name: radarr-service
  name: radarr-service
  namespace: media
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "7878"
    prometheus.io/path: "/metrics"
spec:
  ports:
    - name: "7878"
      port: 7878
      targetPort: 7878
  selector:
    app.kubernetes.io/instance: servarr
    app.kubernetes.io/name: servarr
