starr-config/radarr/radarr-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
      #traefik.ingress.kubernetes.io/router.middlewares: 'kube-system-strip-path-prefix@kubernetescrd,kube-system-radarr-x-forwarded-prefix@kubernetescrd'
spec:
  ingressClassName: traefik
  rules:
    - host: media.picklemustard.dev
      http:
        paths:
          - path: /docs/movie
            pathType: Prefix
            backend:
              service:
                name: radarr-service
                port:
                  number: 7878
